--- a/content/equity-research/_index.Rmd
+++ b/content/equity-research/_index.Rmd
@@ -29,7 +29,7 @@ plotly_center <- function(plot){
 
 }
 ```
-this is a change
+this is a change test
 
 ```{r, warning=FALSE,message=FALSE}
 library(tidyverse)
