--- a/public/blog/2019-08-11-coding-in-r-a-love-story.en.Rmd
+++ b/public/blog/2019-08-11-coding-in-r-a-love-story.en.Rmd
@@ -1,5 +1,5 @@
 ---
-title: why I code in R
+title: why I choose to code in R
 author: Zac Garland
 date: '2019-08-11'
 slug: coding-in-r-a-love-story
@@ -19,14 +19,15 @@ type: post
 
 
 ### This is a new test for R Markdown
+This is a placeholder for a post on why i choose to code in R
 
-This tutorial will show you how to create a simple theme in Hugo. I assume that you are familiar with HTML, the bash command line, and that you are comfortable using Markdown to format content. I'll explain how Hugo uses templates and how you can organize your templates to create a theme. I won't cover using CSS to style your theme.
 ```{r}
 plotly_center <- function(plot){
 
   shiny::div(plot,align = "center")
 
 }
+
 ```
 this is a change
 
