--- a/public/equity-research/_index.Rmd
+++ b/public/equity-research/_index.Rmd
@@ -19,9 +19,7 @@ linktitle: ''
 type: post
 ---
 
-### This is a new test for R Markdown
-
-This tutorial will show you how to create a simple theme in Hugo. I assume that you are familiar with HTML, the bash command line, and that you are comfortable using Markdown to format content. I'll explain how Hugo uses templates and how you can organize your templates to create a theme. I won't cover using CSS to style your theme.
+this is a placeholder for my post on equity research in R
 ```{r}
 plotly_center <- function(plot){
 
