--- a/public/about/_index.Rmd
+++ b/public/about/_index.Rmd
@@ -1,34 +1,28 @@
 ---
 date: "2014-04-09"
-title: About Me
+title: a mountain man who fell in love with coding, investing, & data science
 ---
 
 <div>
 
+<div style="text-transform: lowercase;">
+Hi my name is Zac Garland! 
 
-<div class = "row" style ="height: 500px;">
-<div class="column-left-half">
-<h1><span class="fa fa-briefcase about-icon"></span></h1>
+I'm a self taught developer impassioned about investing & data science.  
 
-<h5>
-currently an <font color='#FF652F'><b>Associate Engineer at Mastercard</b></font><br>
+Professionally, I'm an associate engineer @ Mastercard's economics institute. my work is focused on data science & web development.
+lately i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
+where I worked with institutional asset managers on their quant workflows.  
 
-on the <font color='#14a76c'><b>economic and market insights team </b></font><br>
+Outside of work, I'm a mountain man. I live in Breckenridge, colorado. you can find me with my pup (winston) in the woods, knee deep in a river, up a mountain, or walking around town.
 
-focused on <font color='#FFCF75'><b>data science & web development</b></font>
-</h5>
+learn more about my coding journey <a>here</a>.
 
-<!-- end column left -->
+feel free to <a>contact me</a> about equity research, data science, or future opportunities. 
+
+<hr>
+
 </div>
-
-<div class="column-right-half">
-<h1><span class="fas fa-chart-line about-icon"></span></h1>
-
-
-<!-- end column right -->
-</div>
-</div>
-
 
 
 <!-- end -->
