--- a/content/about/_index.Rmd
+++ b/content/about/_index.Rmd
@@ -8,17 +8,21 @@ title: a mountain man who fell in love with coding, investing, & data science
 <div style="text-transform: lowercase;">
 Hi my name is Zac Garland! 
 
-I'm a self taught developer impassioned about investing & data science.  
+I'm a self taught developer that's passionate about equity research & data science.  
 
-Professionally, I'm an associate engineer @ Mastercard's economics institute. my work is focused on data science & web development.
+Outside of work, I'm best described as a mountain man. I live in Breckenridge, colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.
+
+i have a degree in finance & during my tenure led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children's cancer research.<br>
+
+<!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
+
+Professionally, I'm an associate engineer @ Mastercard. i'm part of their economics institute & mainly focus on data science & web development.
 lately i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.  
 
-Outside of work, I'm a mountain man. I live in Breckenridge, colorado. you can find me with my pup (winston) in the woods, knee deep in a river, up a mountain, or walking around town.
+you can learn more about my coding journey <a>here</a>.
 
-learn more about my coding journey <a>here</a>.
-
-feel free to <a>contact me</a> about equity research, data science, or future opportunities. 
+feel free to <a href="/contact">contact me</a> about equity research, data science, or future opportunities. 
 
 <hr>
 
