--- a/content/about/_index.Rmd
+++ b/content/about/_index.Rmd
@@ -12,7 +12,7 @@ I'm a self taught developer that's passionate about equity research & data scien
 
 Outside of work, I'm best described as a mountain man. I live in Breckenridge, colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.
 
-i have a degree in finance & during my tenure led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children's cancer research.<br>
+i have a degree in finance & during my college career led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children's cancer research.<br>
 
 <!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
 
