--- a/public/equity-research/_index.Rmd
+++ b/public/equity-research/_index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Equity Research in R
 author: Zac Garland
-date: '2019-08-11'
+date: "`r Sys.Date()`"
 slug: equity-research-in-r
 categories:
   - R
