--- a/content/equity-research/_index.Rmd
+++ b/content/equity-research/_index.Rmd
@@ -19,15 +19,16 @@ linktitle: ''
 type: post
 ---
 
-this is a placeholder for my post on equity research in R test
+this is a placeholder for my post on equity research in R
 ```{r}
 plotly_center <- function(plot){
 
   shiny::div(plot,align = "center")
 
 }
+
 ```
-this is a change test
+
 
 ```{r, warning=FALSE,message=FALSE}
 library(tidyverse)
