--- a/public/about/_index.Rmd
+++ b/public/about/_index.Rmd
@@ -20,7 +20,7 @@ Professionally, I'm an associate engineer @ Mastercard. i'm part of their econom
 lately i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.  
 
-you can learn more about my coding journey <a>here</a>.
+you can learn more about my coding journey <a href="/blog/coding-in-r-a-love-story/">here</a>.
 
 feel free to <a href="/contact">contact me</a> about equity research, data science, or future opportunities. 
 
