--- a/content/blog/2019-08-11-coding-in-r-a-love-story.en.Rmd
+++ b/content/blog/2019-08-11-coding-in-r-a-love-story.en.Rmd
@@ -1,7 +1,7 @@
 ---
 title: teach yourself to code
 author: Zac Garland
-date: '2019-08-11'
+date: "`r Sys.Date()`"
 slug: coding-in-r-a-love-story
 categories:
   - R
