--- a/content/equity-research/_index.Rmd
+++ b/content/equity-research/_index.Rmd
@@ -24,6 +24,6 @@ type: post
 
 <center><h2><a href="https://vimeo.com/360549999">R Equity Research</a> by <a href="https://vimeo.com/user102974957">Zac Garland</a></h2></center>
 <div style="position:relative;padding-top:56.25%;">
-<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&autoplay=1#t=5s&rel=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen
+<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&background=1&autoplay=1#t=5s&rel=0&muted=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen
 style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 </div>
