--- a/content/about/_index.Rmd
+++ b/content/about/_index.Rmd
@@ -11,7 +11,7 @@ Hi my name is Zac Garland!
 
 I'm a self taught developer that's passionate about equity research & data science.  
 
-Outside of work, I'm best described as a mountain man. I live in Breckenridge, colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.
+Outside of work, I'm best described as a mountain man. I live in Breckenridge, colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.<br>
 
 i have a degree in finance & during my college career led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children's cancer research.<br>
 
